[gd_scene load_steps=10 format=3 uid="uid://pkib2j8f0521"]

[ext_resource type="Script" path="res://assets/light/light.gd" id="1_j4ayf"]
[ext_resource type="Material" uid="uid://djjx4fo15sd14" path="res://assets/map/level/wall/wall_line_renderer_material.tres" id="2_q1ile"]
[ext_resource type="Script" path="res://addons/LineRenderer/line_renderer.gd" id="3_dc0qo"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_7jnoc"]

[sub_resource type="SphereMesh" id="SphereMesh_3dj65"]
radial_segments = 16
rings = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fp4lq"]
resource_local_to_scene = true
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0sd7k"]
resource_local_to_scene = true
cull_mode = 1
shading_mode = 0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_c84j5"]
radius = 0.004
height = 1.0
radial_segments = 8
rings = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ip0d0"]
data = PackedVector3Array(0, 0.5, 0, 0, 0.5, 0, 0, 0.4698, 0.171, 0, 0.5, 0, 0.0654, 0.4698, 0.158, 0, 0.4698, 0.171, 0, 0.5, 0, 0, 0.5, 0, 0.0654, 0.4698, 0.158, 0, 0.5, 0, 0.1209, 0.4698, 0.1209, 0.0654, 0.4698, 0.158, 0, 0.5, 0, 0, 0.5, 0, 0.1209, 0.4698, 0.1209, 0, 0.5, 0, 0.158, 0.4698, 0.0654, 0.1209, 0.4698, 0.1209, 0, 0.5, 0, 0, 0.5, 0, 0.158, 0.4698, 0.0654, 0, 0.5, 0, 0.171, 0.4698, 0, 0.158, 0.4698, 0.0654, 0, 0.5, 0, 0, 0.5, 0, 0.171, 0.4698, 0, 0, 0.5, 0, 0.158, 0.4698, -0.0654, 0.171, 0.4698, 0, 0, 0.5, 0, 0, 0.5, 0, 0.158, 0.4698, -0.0654, 0, 0.5, 0, 0.1209, 0.4698, -0.1209, 0.158, 0.4698, -0.0654, 0, 0.5, 0, 0, 0.5, 0, 0.1209, 0.4698, -0.1209, 0, 0.5, 0, 0.0654, 0.4698, -0.158, 0.1209, 0.4698, -0.1209, 0, 0.5, 0, 0, 0.5, 0, 0.0654, 0.4698, -0.158, 0, 0.5, 0, 0, 0.4698, -0.171, 0.0654, 0.4698, -0.158, 0, 0.5, 0, 0, 0.5, 0, 0, 0.4698, -0.171, 0, 0.5, 0, -0.0654, 0.4698, -0.158, 0, 0.4698, -0.171, 0, 0.5, 0, 0, 0.5, 0, -0.0654, 0.4698, -0.158, 0, 0.5, 0, -0.1209, 0.4698, -0.1209, -0.0654, 0.4698, -0.158, 0, 0.5, 0, 0, 0.5, 0, -0.1209, 0.4698, -0.1209, 0, 0.5, 0, -0.158, 0.4698, -0.0654, -0.1209, 0.4698, -0.1209, 0, 0.5, 0, 0, 0.5, 0, -0.158, 0.4698, -0.0654, 0, 0.5, 0, -0.171, 0.4698, 0, -0.158, 0.4698, -0.0654, 0, 0.5, 0, 0, 0.5, 0, -0.171, 0.4698, 0, 0, 0.5, 0, -0.158, 0.4698, 0.0654, -0.171, 0.4698, 0, 0, 0.5, 0, 0, 0.5, 0, -0.158, 0.4698, 0.0654, 0, 0.5, 0, -0.1209, 0.4698, 0.1209, -0.158, 0.4698, 0.0654, 0, 0.5, 0, 0, 0.5, 0, -0.1209, 0.4698, 0.1209, 0, 0.5, 0, -0.0654, 0.4698, 0.158, -0.1209, 0.4698, 0.1209, 0, 0.5, 0, 0, 0.5, 0, -0.0654, 0.4698, 0.158, 0, 0.5, 0, 0, 0.4698, 0.171, -0.0654, 0.4698, 0.158, 0, 0.4698, 0.171, 0.0654, 0.4698, 0.158, 0, 0.383, 0.3214, 0.0654, 0.4698, 0.158, 0.123, 0.383, 0.2969, 0, 0.383, 0.3214, 0.0654, 0.4698, 0.158, 0.1209, 0.4698, 0.1209, 0.123, 0.383, 0.2969, 0.1209, 0.4698, 0.1209, 0.2273, 0.383, 0.2273, 0.123, 0.383, 0.2969, 0.1209, 0.4698, 0.1209, 0.158, 0.4698, 0.0654, 0.2273, 0.383, 0.2273, 0.158, 0.4698, 0.0654, 0.2969, 0.383, 0.123, 0.2273, 0.383, 0.2273, 0.158, 0.4698, 0.0654, 0.171, 0.4698, 0, 0.2969, 0.383, 0.123, 0.171, 0.4698, 0, 0.3214, 0.383, 0, 0.2969, 0.383, 0.123, 0.171, 0.4698, 0, 0.158, 0.4698, -0.0654, 0.3214, 0.383, 0, 0.158, 0.4698, -0.0654, 0.2969, 0.383, -0.123, 0.3214, 0.383, 0, 0.158, 0.4698, -0.0654, 0.1209, 0.4698, -0.1209, 0.2969, 0.383, -0.123, 0.1209, 0.4698, -0.1209, 0.2273, 0.383, -0.2273, 0.2969, 0.383, -0.123, 0.1209, 0.4698, -0.1209, 0.0654, 0.4698, -0.158, 0.2273, 0.383, -0.2273, 0.0654, 0.4698, -0.158, 0.123, 0.383, -0.2969, 0.2273, 0.383, -0.2273, 0.0654, 0.4698, -0.158, 0, 0.4698, -0.171, 0.123, 0.383, -0.2969, 0, 0.4698, -0.171, 0, 0.383, -0.3214, 0.123, 0.383, -0.2969, 0, 0.4698, -0.171, -0.0654, 0.4698, -0.158, 0, 0.383, -0.3214, -0.0654, 0.4698, -0.158, -0.123, 0.383, -0.2969, 0, 0.383, -0.3214, -0.0654, 0.4698, -0.158, -0.1209, 0.4698, -0.1209, -0.123, 0.383, -0.2969, -0.1209, 0.4698, -0.1209, -0.2273, 0.383, -0.2273, -0.123, 0.383, -0.2969, -0.1209, 0.4698, -0.1209, -0.158, 0.4698, -0.0654, -0.2273, 0.383, -0.2273, -0.158, 0.4698, -0.0654, -0.2969, 0.383, -0.123, -0.2273, 0.383, -0.2273, -0.158, 0.4698, -0.0654, -0.171, 0.4698, 0, -0.2969, 0.383, -0.123, -0.171, 0.4698, 0, -0.3214, 0.383, 0, -0.2969, 0.383, -0.123, -0.171, 0.4698, 0, -0.158, 0.4698, 0.0654, -0.3214, 0.383, 0, -0.158, 0.4698, 0.0654, -0.2969, 0.383, 0.123, -0.3214, 0.383, 0, -0.158, 0.4698, 0.0654, -0.1209, 0.4698, 0.1209, -0.2969, 0.383, 0.123, -0.1209, 0.4698, 0.1209, -0.2273, 0.383, 0.2273, -0.2969, 0.383, 0.123, -0.1209, 0.4698, 0.1209, -0.0654, 0.4698, 0.158, -0.2273, 0.383, 0.2273, -0.0654, 0.4698, 0.158, -0.123, 0.383, 0.2969, -0.2273, 0.383, 0.2273, -0.0654, 0.4698, 0.158, 0, 0.4698, 0.171, -0.123, 0.383, 0.2969, 0, 0.4698, 0.171, 0, 0.383, 0.3214, -0.123, 0.383, 0.2969, 0, 0.383, 0.3214, 0.123, 0.383, 0.2969, 0, 0.25, 0.433, 0.123, 0.383, 0.2969, 0.1657, 0.25, 0.4001, 0, 0.25, 0.433, 0.123, 0.383, 0.2969, 0.2273, 0.383, 0.2273, 0.1657, 0.25, 0.4001, 0.2273, 0.383, 0.2273, 0.3062, 0.25, 0.3062, 0.1657, 0.25, 0.4001, 0.2273, 0.383, 0.2273, 0.2969, 0.383, 0.123, 0.3062, 0.25, 0.3062, 0.2969, 0.383, 0.123, 0.4001, 0.25, 0.1657, 0.3062, 0.25, 0.3062, 0.2969, 0.383, 0.123, 0.3214, 0.383, 0, 0.4001, 0.25, 0.1657, 0.3214, 0.383, 0, 0.433, 0.25, 0, 0.4001, 0.25, 0.1657, 0.3214, 0.383, 0, 0.2969, 0.383, -0.123, 0.433, 0.25, 0, 0.2969, 0.383, -0.123, 0.4001, 0.25, -0.1657, 0.433, 0.25, 0, 0.2969, 0.383, -0.123, 0.2273, 0.383, -0.2273, 0.4001, 0.25, -0.1657, 0.2273, 0.383, -0.2273, 0.3062, 0.25, -0.3062, 0.4001, 0.25, -0.1657, 0.2273, 0.383, -0.2273, 0.123, 0.383, -0.2969, 0.3062, 0.25, -0.3062, 0.123, 0.383, -0.2969, 0.1657, 0.25, -0.4001, 0.3062, 0.25, -0.3062, 0.123, 0.383, -0.2969, 0, 0.383, -0.3214, 0.1657, 0.25, -0.4001, 0, 0.383, -0.3214, 0, 0.25, -0.433, 0.1657, 0.25, -0.4001, 0, 0.383, -0.3214, -0.123, 0.383, -0.2969, 0, 0.25, -0.433, -0.123, 0.383, -0.2969, -0.1657, 0.25, -0.4001, 0, 0.25, -0.433, -0.123, 0.383, -0.2969, -0.2273, 0.383, -0.2273, -0.1657, 0.25, -0.4001, -0.2273, 0.383, -0.2273, -0.3062, 0.25, -0.3062, -0.1657, 0.25, -0.4001, -0.2273, 0.383, -0.2273, -0.2969, 0.383, -0.123, -0.3062, 0.25, -0.3062, -0.2969, 0.383, -0.123, -0.4001, 0.25, -0.1657, -0.3062, 0.25, -0.3062, -0.2969, 0.383, -0.123, -0.3214, 0.383, 0, -0.4001, 0.25, -0.1657, -0.3214, 0.383, 0, -0.433, 0.25, 0, -0.4001, 0.25, -0.1657, -0.3214, 0.383, 0, -0.2969, 0.383, 0.123, -0.433, 0.25, 0, -0.2969, 0.383, 0.123, -0.4001, 0.25, 0.1657, -0.433, 0.25, 0, -0.2969, 0.383, 0.123, -0.2273, 0.383, 0.2273, -0.4001, 0.25, 0.1657, -0.2273, 0.383, 0.2273, -0.3062, 0.25, 0.3062, -0.4001, 0.25, 0.1657, -0.2273, 0.383, 0.2273, -0.123, 0.383, 0.2969, -0.3062, 0.25, 0.3062, -0.123, 0.383, 0.2969, -0.1657, 0.25, 0.4001, -0.3062, 0.25, 0.3062, -0.123, 0.383, 0.2969, 0, 0.383, 0.3214, -0.1657, 0.25, 0.4001, 0, 0.383, 0.3214, 0, 0.25, 0.433, -0.1657, 0.25, 0.4001, 0, 0.25, 0.433, 0.1657, 0.25, 0.4001, 0, 0.0868, 0.4924, 0.1657, 0.25, 0.4001, 0.1884, 0.0868, 0.4549, 0, 0.0868, 0.4924, 0.1657, 0.25, 0.4001, 0.3062, 0.25, 0.3062, 0.1884, 0.0868, 0.4549, 0.3062, 0.25, 0.3062, 0.3482, 0.0868, 0.3482, 0.1884, 0.0868, 0.4549, 0.3062, 0.25, 0.3062, 0.4001, 0.25, 0.1657, 0.3482, 0.0868, 0.3482, 0.4001, 0.25, 0.1657, 0.4549, 0.0868, 0.1884, 0.3482, 0.0868, 0.3482, 0.4001, 0.25, 0.1657, 0.433, 0.25, 0, 0.4549, 0.0868, 0.1884, 0.433, 0.25, 0, 0.4924, 0.0868, 0, 0.4549, 0.0868, 0.1884, 0.433, 0.25, 0, 0.4001, 0.25, -0.1657, 0.4924, 0.0868, 0, 0.4001, 0.25, -0.1657, 0.4549, 0.0868, -0.1884, 0.4924, 0.0868, 0, 0.4001, 0.25, -0.1657, 0.3062, 0.25, -0.3062, 0.4549, 0.0868, -0.1884, 0.3062, 0.25, -0.3062, 0.3482, 0.0868, -0.3482, 0.4549, 0.0868, -0.1884, 0.3062, 0.25, -0.3062, 0.1657, 0.25, -0.4001, 0.3482, 0.0868, -0.3482, 0.1657, 0.25, -0.4001, 0.1884, 0.0868, -0.4549, 0.3482, 0.0868, -0.3482, 0.1657, 0.25, -0.4001, 0, 0.25, -0.433, 0.1884, 0.0868, -0.4549, 0, 0.25, -0.433, 0, 0.0868, -0.4924, 0.1884, 0.0868, -0.4549, 0, 0.25, -0.433, -0.1657, 0.25, -0.4001, 0, 0.0868, -0.4924, -0.1657, 0.25, -0.4001, -0.1884, 0.0868, -0.4549, 0, 0.0868, -0.4924, -0.1657, 0.25, -0.4001, -0.3062, 0.25, -0.3062, -0.1884, 0.0868, -0.4549, -0.3062, 0.25, -0.3062, -0.3482, 0.0868, -0.3482, -0.1884, 0.0868, -0.4549, -0.3062, 0.25, -0.3062, -0.4001, 0.25, -0.1657, -0.3482, 0.0868, -0.3482, -0.4001, 0.25, -0.1657, -0.4549, 0.0868, -0.1884, -0.3482, 0.0868, -0.3482, -0.4001, 0.25, -0.1657, -0.433, 0.25, 0, -0.4549, 0.0868, -0.1884, -0.433, 0.25, 0, -0.4924, 0.0868, 0, -0.4549, 0.0868, -0.1884, -0.433, 0.25, 0, -0.4001, 0.25, 0.1657, -0.4924, 0.0868, 0, -0.4001, 0.25, 0.1657, -0.4549, 0.0868, 0.1884, -0.4924, 0.0868, 0, -0.4001, 0.25, 0.1657, -0.3062, 0.25, 0.3062, -0.4549, 0.0868, 0.1884, -0.3062, 0.25, 0.3062, -0.3482, 0.0868, 0.3482, -0.4549, 0.0868, 0.1884, -0.3062, 0.25, 0.3062, -0.1657, 0.25, 0.4001, -0.3482, 0.0868, 0.3482, -0.1657, 0.25, 0.4001, -0.1884, 0.0868, 0.4549, -0.3482, 0.0868, 0.3482, -0.1657, 0.25, 0.4001, 0, 0.25, 0.433, -0.1884, 0.0868, 0.4549, 0, 0.25, 0.433, 0, 0.0868, 0.4924, -0.1884, 0.0868, 0.4549, 0, 0.0868, 0.4924, 0.1884, 0.0868, 0.4549, 0, -0.0868, 0.4924, 0.1884, 0.0868, 0.4549, 0.1884, -0.0868, 0.4549, 0, -0.0868, 0.4924, 0.1884, 0.0868, 0.4549, 0.3482, 0.0868, 0.3482, 0.1884, -0.0868, 0.4549, 0.3482, 0.0868, 0.3482, 0.3482, -0.0868, 0.3482, 0.1884, -0.0868, 0.4549, 0.3482, 0.0868, 0.3482, 0.4549, 0.0868, 0.1884, 0.3482, -0.0868, 0.3482, 0.4549, 0.0868, 0.1884, 0.4549, -0.0868, 0.1884, 0.3482, -0.0868, 0.3482, 0.4549, 0.0868, 0.1884, 0.4924, 0.0868, 0, 0.4549, -0.0868, 0.1884, 0.4924, 0.0868, 0, 0.4924, -0.0868, 0, 0.4549, -0.0868, 0.1884, 0.4924, 0.0868, 0, 0.4549, 0.0868, -0.1884, 0.4924, -0.0868, 0, 0.4549, 0.0868, -0.1884, 0.4549, -0.0868, -0.1884, 0.4924, -0.0868, 0, 0.4549, 0.0868, -0.1884, 0.3482, 0.0868, -0.3482, 0.4549, -0.0868, -0.1884, 0.3482, 0.0868, -0.3482, 0.3482, -0.0868, -0.3482, 0.4549, -0.0868, -0.1884, 0.3482, 0.0868, -0.3482, 0.1884, 0.0868, -0.4549, 0.3482, -0.0868, -0.3482, 0.1884, 0.0868, -0.4549, 0.1884, -0.0868, -0.4549, 0.3482, -0.0868, -0.3482, 0.1884, 0.0868, -0.4549, 0, 0.0868, -0.4924, 0.1884, -0.0868, -0.4549, 0, 0.0868, -0.4924, 0, -0.0868, -0.4924, 0.1884, -0.0868, -0.4549, 0, 0.0868, -0.4924, -0.1884, 0.0868, -0.4549, 0, -0.0868, -0.4924, -0.1884, 0.0868, -0.4549, -0.1884, -0.0868, -0.4549, 0, -0.0868, -0.4924, -0.1884, 0.0868, -0.4549, -0.3482, 0.0868, -0.3482, -0.1884, -0.0868, -0.4549, -0.3482, 0.0868, -0.3482, -0.3482, -0.0868, -0.3482, -0.1884, -0.0868, -0.4549, -0.3482, 0.0868, -0.3482, -0.4549, 0.0868, -0.1884, -0.3482, -0.0868, -0.3482, -0.4549, 0.0868, -0.1884, -0.4549, -0.0868, -0.1884, -0.3482, -0.0868, -0.3482, -0.4549, 0.0868, -0.1884, -0.4924, 0.0868, 0, -0.4549, -0.0868, -0.1884, -0.4924, 0.0868, 0, -0.4924, -0.0868, 0, -0.4549, -0.0868, -0.1884, -0.4924, 0.0868, 0, -0.4549, 0.0868, 0.1884, -0.4924, -0.0868, 0, -0.4549, 0.0868, 0.1884, -0.4549, -0.0868, 0.1884, -0.4924, -0.0868, 0, -0.4549, 0.0868, 0.1884, -0.3482, 0.0868, 0.3482, -0.4549, -0.0868, 0.1884, -0.3482, 0.0868, 0.3482, -0.3482, -0.0868, 0.3482, -0.4549, -0.0868, 0.1884, -0.3482, 0.0868, 0.3482, -0.1884, 0.0868, 0.4549, -0.3482, -0.0868, 0.3482, -0.1884, 0.0868, 0.4549, -0.1884, -0.0868, 0.4549, -0.3482, -0.0868, 0.3482, -0.1884, 0.0868, 0.4549, 0, 0.0868, 0.4924, -0.1884, -0.0868, 0.4549, 0, 0.0868, 0.4924, 0, -0.0868, 0.4924, -0.1884, -0.0868, 0.4549, 0, -0.0868, 0.4924, 0.1884, -0.0868, 0.4549, 0, -0.25, 0.433, 0.1884, -0.0868, 0.4549, 0.1657, -0.25, 0.4001, 0, -0.25, 0.433, 0.1884, -0.0868, 0.4549, 0.3482, -0.0868, 0.3482, 0.1657, -0.25, 0.4001, 0.3482, -0.0868, 0.3482, 0.3062, -0.25, 0.3062, 0.1657, -0.25, 0.4001, 0.3482, -0.0868, 0.3482, 0.4549, -0.0868, 0.1884, 0.3062, -0.25, 0.3062, 0.4549, -0.0868, 0.1884, 0.4001, -0.25, 0.1657, 0.3062, -0.25, 0.3062, 0.4549, -0.0868, 0.1884, 0.4924, -0.0868, 0, 0.4001, -0.25, 0.1657, 0.4924, -0.0868, 0, 0.433, -0.25, 0, 0.4001, -0.25, 0.1657, 0.4924, -0.0868, 0, 0.4549, -0.0868, -0.1884, 0.433, -0.25, 0, 0.4549, -0.0868, -0.1884, 0.4001, -0.25, -0.1657, 0.433, -0.25, 0, 0.4549, -0.0868, -0.1884, 0.3482, -0.0868, -0.3482, 0.4001, -0.25, -0.1657, 0.3482, -0.0868, -0.3482, 0.3062, -0.25, -0.3062, 0.4001, -0.25, -0.1657, 0.3482, -0.0868, -0.3482, 0.1884, -0.0868, -0.4549, 0.3062, -0.25, -0.3062, 0.1884, -0.0868, -0.4549, 0.1657, -0.25, -0.4001, 0.3062, -0.25, -0.3062, 0.1884, -0.0868, -0.4549, 0, -0.0868, -0.4924, 0.1657, -0.25, -0.4001, 0, -0.0868, -0.4924, 0, -0.25, -0.433, 0.1657, -0.25, -0.4001, 0, -0.0868, -0.4924, -0.1884, -0.0868, -0.4549, 0, -0.25, -0.433, -0.1884, -0.0868, -0.4549, -0.1657, -0.25, -0.4001, 0, -0.25, -0.433, -0.1884, -0.0868, -0.4549, -0.3482, -0.0868, -0.3482, -0.1657, -0.25, -0.4001, -0.3482, -0.0868, -0.3482, -0.3062, -0.25, -0.3062, -0.1657, -0.25, -0.4001, -0.3482, -0.0868, -0.3482, -0.4549, -0.0868, -0.1884, -0.3062, -0.25, -0.3062, -0.4549, -0.0868, -0.1884, -0.4001, -0.25, -0.1657, -0.3062, -0.25, -0.3062, -0.4549, -0.0868, -0.1884, -0.4924, -0.0868, 0, -0.4001, -0.25, -0.1657, -0.4924, -0.0868, 0, -0.433, -0.25, 0, -0.4001, -0.25, -0.1657, -0.4924, -0.0868, 0, -0.4549, -0.0868, 0.1884, -0.433, -0.25, 0, -0.4549, -0.0868, 0.1884, -0.4001, -0.25, 0.1657, -0.433, -0.25, 0, -0.4549, -0.0868, 0.1884, -0.3482, -0.0868, 0.3482, -0.4001, -0.25, 0.1657, -0.3482, -0.0868, 0.3482, -0.3062, -0.25, 0.3062, -0.4001, -0.25, 0.1657, -0.3482, -0.0868, 0.3482, -0.1884, -0.0868, 0.4549, -0.3062, -0.25, 0.3062, -0.1884, -0.0868, 0.4549, -0.1657, -0.25, 0.4001, -0.3062, -0.25, 0.3062, -0.1884, -0.0868, 0.4549, 0, -0.0868, 0.4924, -0.1657, -0.25, 0.4001, 0, -0.0868, 0.4924, 0, -0.25, 0.433, -0.1657, -0.25, 0.4001, 0, -0.25, 0.433, 0.1657, -0.25, 0.4001, 0, -0.383, 0.3214, 0.1657, -0.25, 0.4001, 0.123, -0.383, 0.2969, 0, -0.383, 0.3214, 0.1657, -0.25, 0.4001, 0.3062, -0.25, 0.3062, 0.123, -0.383, 0.2969, 0.3062, -0.25, 0.3062, 0.2273, -0.383, 0.2273, 0.123, -0.383, 0.2969, 0.3062, -0.25, 0.3062, 0.4001, -0.25, 0.1657, 0.2273, -0.383, 0.2273, 0.4001, -0.25, 0.1657, 0.2969, -0.383, 0.123, 0.2273, -0.383, 0.2273, 0.4001, -0.25, 0.1657, 0.433, -0.25, 0, 0.2969, -0.383, 0.123, 0.433, -0.25, 0, 0.3214, -0.383, 0, 0.2969, -0.383, 0.123, 0.433, -0.25, 0, 0.4001, -0.25, -0.1657, 0.3214, -0.383, 0, 0.4001, -0.25, -0.1657, 0.2969, -0.383, -0.123, 0.3214, -0.383, 0, 0.4001, -0.25, -0.1657, 0.3062, -0.25, -0.3062, 0.2969, -0.383, -0.123, 0.3062, -0.25, -0.3062, 0.2273, -0.383, -0.2273, 0.2969, -0.383, -0.123, 0.3062, -0.25, -0.3062, 0.1657, -0.25, -0.4001, 0.2273, -0.383, -0.2273, 0.1657, -0.25, -0.4001, 0.123, -0.383, -0.2969, 0.2273, -0.383, -0.2273, 0.1657, -0.25, -0.4001, 0, -0.25, -0.433, 0.123, -0.383, -0.2969, 0, -0.25, -0.433, 0, -0.383, -0.3214, 0.123, -0.383, -0.2969, 0, -0.25, -0.433, -0.1657, -0.25, -0.4001, 0, -0.383, -0.3214, -0.1657, -0.25, -0.4001, -0.123, -0.383, -0.2969, 0, -0.383, -0.3214, -0.1657, -0.25, -0.4001, -0.3062, -0.25, -0.3062, -0.123, -0.383, -0.2969, -0.3062, -0.25, -0.3062, -0.2273, -0.383, -0.2273, -0.123, -0.383, -0.2969, -0.3062, -0.25, -0.3062, -0.4001, -0.25, -0.1657, -0.2273, -0.383, -0.2273, -0.4001, -0.25, -0.1657, -0.2969, -0.383, -0.123, -0.2273, -0.383, -0.2273, -0.4001, -0.25, -0.1657, -0.433, -0.25, 0, -0.2969, -0.383, -0.123, -0.433, -0.25, 0, -0.3214, -0.383, 0, -0.2969, -0.383, -0.123, -0.433, -0.25, 0, -0.4001, -0.25, 0.1657, -0.3214, -0.383, 0, -0.4001, -0.25, 0.1657, -0.2969, -0.383, 0.123, -0.3214, -0.383, 0, -0.4001, -0.25, 0.1657, -0.3062, -0.25, 0.3062, -0.2969, -0.383, 0.123, -0.3062, -0.25, 0.3062, -0.2273, -0.383, 0.2273, -0.2969, -0.383, 0.123, -0.3062, -0.25, 0.3062, -0.1657, -0.25, 0.4001, -0.2273, -0.383, 0.2273, -0.1657, -0.25, 0.4001, -0.123, -0.383, 0.2969, -0.2273, -0.383, 0.2273, -0.1657, -0.25, 0.4001, 0, -0.25, 0.433, -0.123, -0.383, 0.2969, 0, -0.25, 0.433, 0, -0.383, 0.3214, -0.123, -0.383, 0.2969, 0, -0.383, 0.3214, 0.123, -0.383, 0.2969, 0, -0.4698, 0.171, 0.123, -0.383, 0.2969, 0.0654, -0.4698, 0.158, 0, -0.4698, 0.171, 0.123, -0.383, 0.2969, 0.2273, -0.383, 0.2273, 0.0654, -0.4698, 0.158, 0.2273, -0.383, 0.2273, 0.1209, -0.4698, 0.1209, 0.0654, -0.4698, 0.158, 0.2273, -0.383, 0.2273, 0.2969, -0.383, 0.123, 0.1209, -0.4698, 0.1209, 0.2969, -0.383, 0.123, 0.158, -0.4698, 0.0654, 0.1209, -0.4698, 0.1209, 0.2969, -0.383, 0.123, 0.3214, -0.383, 0, 0.158, -0.4698, 0.0654, 0.3214, -0.383, 0, 0.171, -0.4698, 0, 0.158, -0.4698, 0.0654, 0.3214, -0.383, 0, 0.2969, -0.383, -0.123, 0.171, -0.4698, 0, 0.2969, -0.383, -0.123, 0.158, -0.4698, -0.0654, 0.171, -0.4698, 0, 0.2969, -0.383, -0.123, 0.2273, -0.383, -0.2273, 0.158, -0.4698, -0.0654, 0.2273, -0.383, -0.2273, 0.1209, -0.4698, -0.1209, 0.158, -0.4698, -0.0654, 0.2273, -0.383, -0.2273, 0.123, -0.383, -0.2969, 0.1209, -0.4698, -0.1209, 0.123, -0.383, -0.2969, 0.0654, -0.4698, -0.158, 0.1209, -0.4698, -0.1209, 0.123, -0.383, -0.2969, 0, -0.383, -0.3214, 0.0654, -0.4698, -0.158, 0, -0.383, -0.3214, 0, -0.4698, -0.171, 0.0654, -0.4698, -0.158, 0, -0.383, -0.3214, -0.123, -0.383, -0.2969, 0, -0.4698, -0.171, -0.123, -0.383, -0.2969, -0.0654, -0.4698, -0.158, 0, -0.4698, -0.171, -0.123, -0.383, -0.2969, -0.2273, -0.383, -0.2273, -0.0654, -0.4698, -0.158, -0.2273, -0.383, -0.2273, -0.1209, -0.4698, -0.1209, -0.0654, -0.4698, -0.158, -0.2273, -0.383, -0.2273, -0.2969, -0.383, -0.123, -0.1209, -0.4698, -0.1209, -0.2969, -0.383, -0.123, -0.158, -0.4698, -0.0654, -0.1209, -0.4698, -0.1209, -0.2969, -0.383, -0.123, -0.3214, -0.383, 0, -0.158, -0.4698, -0.0654, -0.3214, -0.383, 0, -0.171, -0.4698, 0, -0.158, -0.4698, -0.0654, -0.3214, -0.383, 0, -0.2969, -0.383, 0.123, -0.171, -0.4698, 0, -0.2969, -0.383, 0.123, -0.158, -0.4698, 0.0654, -0.171, -0.4698, 0, -0.2969, -0.383, 0.123, -0.2273, -0.383, 0.2273, -0.158, -0.4698, 0.0654, -0.2273, -0.383, 0.2273, -0.1209, -0.4698, 0.1209, -0.158, -0.4698, 0.0654, -0.2273, -0.383, 0.2273, -0.123, -0.383, 0.2969, -0.1209, -0.4698, 0.1209, -0.123, -0.383, 0.2969, -0.0654, -0.4698, 0.158, -0.1209, -0.4698, 0.1209, -0.123, -0.383, 0.2969, 0, -0.383, 0.3214, -0.0654, -0.4698, 0.158, 0, -0.383, 0.3214, 0, -0.4698, 0.171, -0.0654, -0.4698, 0.158, 0, -0.4698, 0.171, 0.0654, -0.4698, 0.158, 0, -0.5, 0, 0.0654, -0.4698, 0.158, 0, -0.5, 0, 0, -0.5, 0, 0.0654, -0.4698, 0.158, 0.1209, -0.4698, 0.1209, 0, -0.5, 0, 0.1209, -0.4698, 0.1209, 0, -0.5, 0, 0, -0.5, 0, 0.1209, -0.4698, 0.1209, 0.158, -0.4698, 0.0654, 0, -0.5, 0, 0.158, -0.4698, 0.0654, 0, -0.5, 0, 0, -0.5, 0, 0.158, -0.4698, 0.0654, 0.171, -0.4698, 0, 0, -0.5, 0, 0.171, -0.4698, 0, 0, -0.5, 0, 0, -0.5, 0, 0.171, -0.4698, 0, 0.158, -0.4698, -0.0654, 0, -0.5, 0, 0.158, -0.4698, -0.0654, 0, -0.5, 0, 0, -0.5, 0, 0.158, -0.4698, -0.0654, 0.1209, -0.4698, -0.1209, 0, -0.5, 0, 0.1209, -0.4698, -0.1209, 0, -0.5, 0, 0, -0.5, 0, 0.1209, -0.4698, -0.1209, 0.0654, -0.4698, -0.158, 0, -0.5, 0, 0.0654, -0.4698, -0.158, 0, -0.5, 0, 0, -0.5, 0, 0.0654, -0.4698, -0.158, 0, -0.4698, -0.171, 0, -0.5, 0, 0, -0.4698, -0.171, 0, -0.5, 0, 0, -0.5, 0, 0, -0.4698, -0.171, -0.0654, -0.4698, -0.158, 0, -0.5, 0, -0.0654, -0.4698, -0.158, 0, -0.5, 0, 0, -0.5, 0, -0.0654, -0.4698, -0.158, -0.1209, -0.4698, -0.1209, 0, -0.5, 0, -0.1209, -0.4698, -0.1209, 0, -0.5, 0, 0, -0.5, 0, -0.1209, -0.4698, -0.1209, -0.158, -0.4698, -0.0654, 0, -0.5, 0, -0.158, -0.4698, -0.0654, 0, -0.5, 0, 0, -0.5, 0, -0.158, -0.4698, -0.0654, -0.171, -0.4698, 0, 0, -0.5, 0, -0.171, -0.4698, 0, 0, -0.5, 0, 0, -0.5, 0, -0.171, -0.4698, 0, -0.158, -0.4698, 0.0654, 0, -0.5, 0, -0.158, -0.4698, 0.0654, 0, -0.5, 0, 0, -0.5, 0, -0.158, -0.4698, 0.0654, -0.1209, -0.4698, 0.1209, 0, -0.5, 0, -0.1209, -0.4698, 0.1209, 0, -0.5, 0, 0, -0.5, 0, -0.1209, -0.4698, 0.1209, -0.0654, -0.4698, 0.158, 0, -0.5, 0, -0.0654, -0.4698, 0.158, 0, -0.5, 0, 0, -0.5, 0, -0.0654, -0.4698, 0.158, 0, -0.4698, 0.171, 0, -0.5, 0, 0, -0.4698, 0.171, 0, -0.5, 0, 0, -0.5, 0)

[node name="Light" type="Node3D"]
script = ExtResource("1_j4ayf")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
light_volumetric_fog_energy = 0.0
shadow_enabled = true
distance_fade_begin = 150.0
distance_fade_shadow = 200.0
omni_attenuation = 0.0

[node name="LineRenderer3D" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
material_override = ExtResource("2_q1ile")
cast_shadow = 0
ignore_occlusion_culling = true
gi_mode = 0
mesh = SubResource("ImmediateMesh_7jnoc")
script = ExtResource("3_dc0qo")
start_thickness = 0.01
end_thickness = 0.01
draw_caps = false
draw_crners = false
use_global_coords = false
tile_texture = false

[node name="Body" type="Node3D" parent="."]

[node name="InnerMesh" type="MeshInstance3D" parent="Body"]
unique_name_in_owner = true
transform = Transform3D(0.063, 0, 0, 0, 0.063, 0, 0, 0, 0.063, 0, 1, 0)
cast_shadow = 0
gi_mode = 0
mesh = SubResource("SphereMesh_3dj65")
skeleton = NodePath("../../OmniLight3D")
surface_material_override/0 = SubResource("StandardMaterial3D_fp4lq")

[node name="OuterMesh" type="MeshInstance3D" parent="Body"]
unique_name_in_owner = true
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 1, 0)
cast_shadow = 0
gi_mode = 0
mesh = SubResource("SphereMesh_3dj65")
skeleton = NodePath("../../OmniLight3D")
surface_material_override/0 = SubResource("StandardMaterial3D_0sd7k")

[node name="StickMesh" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
cast_shadow = 0
gi_mode = 0
mesh = SubResource("CapsuleMesh_c84j5")
skeleton = NodePath("../../OmniLight3D")
surface_material_override/0 = SubResource("StandardMaterial3D_0sd7k")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 1, 0)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ip0d0")
